<resources>
    <string name="app_name">Tech App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Logout</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="mail">Email</string>
    <string name="mdp">Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_categories">Categories</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_to_our_store">Welcome to our store</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="didn_t_have_any_account">Didn\'t have any account ?</string>
    <string name="sign_up_here"><u>Sign Up here</u></string>
    <string name="audio">Audio</string>
    <string name="it_s_modular_and_designed_to_last">It\'s modular and designed to last</string>
    <string name="if_you_have_any_account">If you have any account?</string>
    <string name="sign_in_here"><u>Sign In here</u></string>

    <string name="username">Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="birth_date">Birth Date</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="find_your_ngadget">Find your\nGadget</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="account_balance" />
    <string name="balance_currency" />
    <string name="balance_amount" />
    <string name="login_here">Login here</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My orders</string>
    <string name="favorites">Favorites</string>
    <string name="delivery">Delivery</string>
    <string name="settings">Settings</string>
    <string name="phone_number">Phone number</string>
    <string name="send_sms">Send SMS</string>
    <string name="verification">Verification</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basket">basket</string>
    <string name="search">Search</string>
    <string name="order_online_ncollect_in_store">Order online \ncollect in store</string>
    <string name="wearable">Wearable</string>
    <string name="phones">Phones</string>
    <string name="laptops">Laptops</string>
    <string name="drones">Drones</string>
    <string name="apple_watch">Apple Watch</string>
    <string name="my_profile">My profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="plus">+</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_brand">Product Brand</string>
    <string name="product_price">Product Price ($)</string>
    <string name="product_type">Product Type</string>
    <string name="description">Description</string>
    <string name="edit_product">Edit Product</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>


</resources>