<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    tools:context=".ui.home.HomeFragment">


    <EditText
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search"
        android:paddingStart="20dp"
        android:layout_marginTop="40dp"
        android:drawableTint="@color/black"
        android:textColor="@color/black"
        android:drawablePadding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/searchedittext"
        tools:ignore="RtlSymmetry,UnusedAttribute" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="128dp"
        android:text="@string/order_online_ncollect_in_store"
        android:textSize="30sp"

        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@color/background"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/wearable" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/laptops" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phones" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drones" />

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="465dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        tools:ignore="SpeakableTextPresentCheck">

    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/addproduct"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="208dp"
        android:layout_marginTop="744dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/add_product"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:icon="@drawable/ic_add"
        app:iconGravity="end"
        app:iconPadding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>