<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="#F5F5F8"
    >


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="70dp"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameedittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mail"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:startIconDrawable="@drawable/ic_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailedittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mdp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/textcolor"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passedittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/confirmpass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/textcolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmpassedittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:hint="@string/birth_date"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpass"
        app:startIconDrawable="@drawable/ic_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateedittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup"
        android:layout_width="314dp"
        android:layout_height="70dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="228dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:fontFamily="@font/raleway_extrabold" />

    <ImageButton
        android:id="@+id/apple"
        android:layout_width="74dp"

        android:layout_height="67dp"
        android:layout_marginStart="48dp"

        android:layout_marginLeft="48dp"
        android:layout_marginTop="52dp"

        android:background="@drawable/imagebuttons"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/ic_apple"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="74dp"
        android:layout_height="67dp"

        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"

        android:layout_marginTop="52dp"
        android:background="@drawable/imagebuttons"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/ic_facebook"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/google"
        android:layout_width="74dp"
        android:layout_height="67dp"

        android:layout_marginStart="284dp"
        android:layout_marginLeft="284dp"

        android:layout_marginTop="52dp"
        android:background="@drawable/imagebuttons"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:srcCompat="@drawable/ic_google"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/signin1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="768dp"
        android:text="@string/login_here"
        android:textAllCaps="false"
        android:textColor="@color/forgot_password"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="@font/raleway_semibold" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="21dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>