<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.account.AccountFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/my_profile"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:elevation="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userimage"
                android:layout_width="110dp"
                android:layout_height="110dp"

                />
        </LinearLayout>


        <androidx.cardview.widget.CardView

            android:layout_width="300dp"
            android:layout_height="150dp"
            app:cardElevation="0dp"

            android:layout_marginStart="20dp"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"

            app:cardCornerRadius="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="95dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="95dp"

                android:fontFamily="@font/raleway"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/raleway_semibold"
                android:layout_marginTop="45dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/EditProfile"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="408dp"
        android:backgroundTint="@color/white"
        android:stateListAnimator="@null"
        android:text="@string/edit_profile"

        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_chevron_left"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="496dp"
        android:backgroundTint="@color/white"
        android:stateListAnimator="@null"
        android:text="@string/logout"

        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_logout"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>